--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "storybook-dark-mode": "^4.0.2",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
   },
@@ -41,15 +42,18 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.0",
+    "@storybook/addon-docs": "^8.1.11",
     "@storybook/addon-essentials": "^8.1.11",
     "@storybook/addon-interactions": "^8.1.11",
     "@storybook/addon-links": "^8.1.11",
     "@storybook/addon-onboarding": "^8.1.11",
     "@storybook/blocks": "^8.1.11",
+    "@storybook/manager-api": "^8.1.11",
     "@storybook/preset-create-react-app": "^8.1.11",
     "@storybook/react": "^8.1.11",
     "@storybook/react-webpack5": "^8.1.11",
     "@storybook/test": "^8.1.11",
+    "@storybook/theming": "^8.1.11",
     "eslint-plugin-storybook": "^0.8.0",
     "prop-types": "^15.8.1",
     "storybook": "^8.1.11",
