--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@chromatic-com/storybook": "^1.6.0",
     "@storybook/addon-docs": "^8.1.11",
     "@storybook/addon-essentials": "^8.1.11",
